# chorus

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  benchmark.py  run_all.py  verify_smoke_results.py
benchmarks/configs/: llama3_1b_alpaca_dp_ablation.yaml  llama3_1b_alpaca_fold_ablation.yaml  llama3_1b_alpaca_hetero_rank.yaml  llama3_1b_alpaca_rank_ablation.yaml  phi3_alpaca_clients_sweep.yaml  smoke.yaml  tinyllama_glue_sst2.yaml
benchmarks/legacy/: __init__.py
benchmarks/results/: README.md
chorus/: __init__.py  exceptions.py  patterns.py
chorus/cli/: main.py
chorus/client/: __init__.py  delta.py  sdk.py  trainer.py
chorus/eval/: __init__.py  config.py  datasets.py  metrics.py  report.py  runner.py
chorus/privacy/: __init__.py  accountant.py
chorus/server/: __init__.py  aggregation.py  app.py  privacy.py  storage.py  weight_manager.py  ws.py
chorus/simulate/: runner.py
chorus_adapter/: adapter_config.json
chorus_adapter_b/: adapter_config.json
docs/: honest-tradeoffs.md
docs/releases/: v0.2.0.md
docs/superpowers/handoff/: 2026-05-22-session-handoff.md
docs/superpowers/plans/: 2026-05-19-feature-1-ci-pipeline.md  2026-05-19-feature-2-dp-accountant.md  2026-05-19-phase-1-execution-plan.md  2026-05-20-feature-3-eval-harness.md  2026-05-22-feature-4-benchmark-suite.md  2026-05-22-feature-5-honest-tradeoffs.md  2026-05-22-feature-6-v020-release.md
docs/superpowers/specs/: 2026-05-19-chorus-phase-1-credibility-design.md  2026-05-19-chorus-roadmap.md
examples/: quickstart.py
examples/health_metrics/: federated_health.py
fedlora/: __init__.py
fedlora/cli/: main.py
fedlora/client/: sdk.py
fedlora/server/: aggregation.py  app.py  storage.py
fedlora/simulate/: runner.py
notebooks/: chorus_centralized_baseline.ipynb  chorus_centralized_vs_federated.ipynb  chorus_medical_demo.ipynb  chorus_qwen_test.ipynb
tests/: test_aggregation.py  test_auto_round.py  test_benchmark_run_all.py  test_benchmark_sweep.py  test_benchmark_verify.py  test_cli_eval.py  test_cli_server.py  test_client.py  test_docs_links.py  test_e2e.py  test_eval_config.py  test_eval_datasets.py  test_eval_metrics.py  test_eval_report.py  test_eval_runner.py  test_math_validation.py  test_privacy_accountant.py  test_privacy_cli.py  test_privacy_endpoints.py  test_privacy_persistence.py  test_security.py  test_server.py  test_train_loop.py  test_trainer.py  test_version.py  test_websocket.py  test_weight_manager.py
