[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chorus"
version = "0.1.0"
description = "Federated LoRA adapter aggregation framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Chorus Contributors" }]
keywords = ["federated-learning", "lora", "llm", "fine-tuning", "peft"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "safetensors>=0.4.0",
    "httpx>=0.25.0",
    "click>=8.1.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "rich>=13.0.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]

[project.optional-dependencies]
peft = ["peft>=0.7.0", "transformers>=4.36.0", "datasets>=2.16.0", "accelerate>=0.25.0"]
privacy = ["opacus>=1.4.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.28.0",
    "ruff>=0.1.0",
]
all = ["chorus[peft,privacy,dev]"]

[project.scripts]
chorus = "chorus.cli.main:cli"

[project.urls]
Homepage = "https://github.com/chorus/chorus"
Repository = "https://github.com/chorus/chorus"

[tool.hatch.build.targets.wheel]
packages = ["chorus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
